[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rem"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "ipython",
    "black",
]

[tool.black]
line-length = 88

[tool.hatch.build.targets.wheel]
packages = ["src/rem"]
